--- a/lib/toshi/web/views/index.erb
+++ b/lib/toshi/web/views/index.erb
@@ -190,7 +190,7 @@
             </ul>
           </li>
           <li class="clearfix">
-            <h5>databse size</h5>
+            <h5>database size</h5>
             <span class="database-size"><%= @database_size %></span>
           </li>
         </ul>
