--- a/lib/toshi/web/views/index.erb
+++ b/lib/toshi/web/views/index.erb
@@ -130,10 +130,10 @@
 
   <div class="col-md-4 col-md-offset-1">
     <div class="toshi_links">
-      <iframe src="http://ghbtns.com/github-btn.html?user=mdo&repo=github-buttons&type=watch&count=true"
+      <iframe src="http://ghbtns.com/github-btn.html?user=coinbase&repo=toshi&type=watch&count=true"
       allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
 
-      <iframe src="http://ghbtns.com/github-btn.html?user=mdo&repo=github-buttons&type=fork&count=true"
+      <iframe src="http://ghbtns.com/github-btn.html?user=coinbase&repo=toshi&type=fork&count=true"
       allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
     </div>
     <div class="section_title clearfix">
@@ -141,7 +141,7 @@
         <h2><%= @network %></h2>
       </div>
       <div class="right websocket_wrap">
-        <span class="websocket_stats active" style="display: none">ACTIVE</span>
+        <span class="websocket_stats active" style="display: none">IN SYNC</span>
         <span class="websocket_stats syncing" style="display: none">SYNCING</span>
         <span class="websocket_stats offline" style="display: none">OFFLINE</span>
       </div>
