--- a/lib/toshi/web/views/layout.erb
+++ b/lib/toshi/web/views/layout.erb
@@ -26,8 +26,8 @@
         </div>
         <div class="col-md-7 features">
           <div class="text-left">
-            <h3>A full bitcoin node backed by PostgreSQL</h3>
-            <p>Toshi is an open source bitcoin node for building scalable web applications or analyzing blockchain data.</p>
+            <h3>A full bitcoin node for building web applications.</h3>
+            <p>Toshi is a complete implementation of the bitcoin protocol, written in Ruby and backed by PostgreSQL.</p>
           </div>
         </div>
       </div>
@@ -44,11 +44,13 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-md-6 col-md-push-3">
-          <p>Toshi is 100% open source and maintained by
-            <a href="https://coinbase.com/" target="_blank" title="Coinbase international digital wallet for bitcoin currency" class="coinbase_logo">Coinbase</a></p>
-          </div>
+          <p>
+            Toshi is 100% open source and maintained by
+            <a href="https://coinbase.com/" target="_blank" title="Coinbase international digital wallet for bitcoin currency" class="coinbase_logo">Coinbase</a>
+          </p>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 </body>
 </html>
