--- a/lib/toshi/web/views/layout.erb
+++ b/lib/toshi/web/views/layout.erb
@@ -9,6 +9,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/admin.css">
+  <link rel="shortcut icon" href="images/favicon1.ico">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="js/plugins.js"></script>
