--- a/lib/toshi/web/views/layout.erb
+++ b/lib/toshi/web/views/layout.erb
@@ -11,6 +11,14 @@
   <link rel="stylesheet" href="/css/admin.css">
   <link rel="shortcut icon" href="images/favicon1.ico">
 
+  <meta property="og:title" content="Toshi - Open source Bitcoin Node">
+  <meta property="og:description" content="Toshi is a built on top of Ruby and PostgreSQL. It’s 100% Open source">
+  <meta property="og:image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
+  <meta property="og:type" content="website">
+  <meta itemprop="name" content="Toshi - Open source Bitcoin Node">
+  <meta itemprop="description" content="Toshi is a built on top of Ruby and PostgreSQL. It’s 100% Open source">
+  <meta itemprop="image" content="https://coinbase.com/assets/toshi/og-toshi.jpg">
+
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/bootstrap.js"></script>
