--- a/lib/toshi/web/static/css/modified.css
+++ b/lib/toshi/web/static/css/modified.css
@@ -148,8 +148,10 @@ header .fork {
 }
 #header h1 {
 	position: relative;
-	display: inline-block;;
+	display: inline-block;
 	padding-left: 70px;
+	font-weight: lighter;
+	margin: 0;
 }
 #header h1 a {
 	font-family: "proxima-nova-light", sans-serif;
@@ -159,18 +161,15 @@ header .fork {
 	font-weight: lighter;
 	text-decoration: none;
 }
-#header h1 b {
-
-}
 #header h1:before {
 	content: "";
 	display: block;
 	position: absolute;
 	left: 0;
-	top: -3px;
-	width: 50px;
-	height: 58px;
-	background-image: url("../images/toshi_logo.png");
+	top: -9px;
+	width: 58px;
+	height: 67px;
+	background-image: url("../images/toshi_logo_white.png");
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: 100%;
@@ -182,12 +181,12 @@ header .fork {
 	bottom: -2px;
 	font-size: 11px;
 	font-weight: bold;
-	text-transform: uppercase;
 	color: rgba(255, 255, 255, 0.7);
 }
 .features h3 {
 	color: #fff;
 	margin-bottom: 3px;
+	margin-top: 4px;
 }
 .features p {
 	margin-bottom: 20px;
@@ -198,10 +197,12 @@ header .fork {
    ========================================================================== */
 .page_wraper article {
 	padding: 50px 0;
-}
-article {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
+.page_wraper article:last-child {
+	border-bottom: none;
+} 
+
 .section_title {
 	margin-bottom: 30px;
 }
@@ -535,31 +536,29 @@ article {
    Footer
    ========================================================================== */
 footer {
-	border-top: 1px solid rgba(178, 178, 178, 0.4);
-	padding: 15px 0;
-	background-color: #142d5c;
+    border-top: 1px solid rgba(178, 178, 178, 0.3);
+    padding: 25px 0;
 }
 footer p {
-	display: inline-flex;
-	color: rgba(255, 255, 255, 0.5);
-	margin: 0 auto;
+    display: block;
+    color: rgba(143, 143, 143, 0.498039);
+    margin: 0px auto;
 }
 footer a {
-	width: 60px;
-	height: 20px;
-	background-image: url("../images/coinbase-white.png");
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: 100%;
-	display: block;
-	margin: 0 0 0 3px;
-	font: 0/0px a;
-	color: transparent;
-	text-shadow: none;
-	opacity: .5;
+    width: 60px;
+    height: 20px;
+    background-image: url("../images/coinbase-gray.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 100%;
+    display: inline-block;
+    font: 0/30px a;
+    color: transparent;
+    text-shadow: none;
+    opacity: .5;
 }
 footer a:hover {
-	opacity: 1;
+    opacity: 1;
 }
 /* ==========================================================================
    RESPONSIVE PARAMETERS
@@ -578,20 +577,59 @@ footer a:hover {
 	header {
 		background-size: 220%;
 	}
+	.features h3 {
+		margin-top: 30px;
+	}
 }
 @media (max-width: 768px) {
 	header {
 		background-size: 270%;
+	}
+	.stats_block .block li, .last_tx .tx li {
+		padding: 0 2%;
+	}
+	.stats_block h5, .last_tx h5 {
+		font-size: 13px;
 	}
 }
 @media (max-width: 540px) {
 	header {
 		background-size: 330%;
 	}
+	.stats_block .block li, .last_tx .tx li {
+		float: none;
+		border-left: none;
+		border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+		padding: 0 0 10px 5px;
+		margin-bottom: 10px;
+	}
+	.stats_block .block li:first-child, .last_tx .tx li:first-child {
+		padding: 0 0 10px 5px;
+		margin-bottom: 10px;
+	}
+	.stats_block .block li:last-child, .last_tx .tx li:last-child {
+		padding: 0 0 0 5px;
+		margin-bottom: 0;
+		border-bottom: none;
+	}
+	.stats_block .block_hash, .last_tx .tx_hash {
+		padding-left: 5px;
+	}
+	.stats_block .block, .last_tx .tx {
+		padding: 25px 0 45px;
+	}
+	.stats_block h5, .last_tx h5 {
+		display: inline-block;
+		width: 25%;
+	}
 }
 @media (max-width: 400px) {
 	header {
 		background-size: 400%;
+	}
+	.stats_block h5, .last_tx h5 {
+		display: block;
+		width: 100%;
 	}
 }
 
