--- a/lib/toshi/web/views/index.erb
+++ b/lib/toshi/web/views/index.erb
@@ -1,205 +1,207 @@
-<div class="row">
+<article class="stats">
+  <div class="row">
 
-  <div class="col-md-7">
-    <!-- Nav tabs -->
-    <ul class="nav nav-tabs" role="tablist">
-      <li class="active"><a href="#block" role="tab" data-toggle="tab">Blocks</a></li>
-      <li><a href="#transaction" role="tab" data-toggle="tab">Transactions</a></li>
-    </ul>
+    <div class="col-md-8 col-lg-7">
+      <!-- Nav tabs -->
+      <ul class="nav nav-tabs" role="tablist">
+        <li class="active"><a href="#block" role="tab" data-toggle="tab">Blocks</a></li>
+        <li><a href="#transaction" role="tab" data-toggle="tab">Transactions</a></li>
+      </ul>
 
-    <!-- Tab panes -->
-    <div class="tab-content">
-      <div class="tab-pane active" id="block">
-        <div class="last_block">
-          <script id="block-template" type="text/x-handlebars-template">
-            <div class="block">
-              <span class="block_num">Block No. {{height}}</span>
+      <!-- Tab panes -->
+      <div class="tab-content">
+        <div class="tab-pane active" id="block">
+          <div class="last_block">
+            <script id="block-template" type="text/x-handlebars-template">
+              <div class="block">
+                <span class="block_num">Block No. {{height}}</span>
+                <ul class="clearfix">
+                  <li>
+                    <h5>Height</h5>
+                    <span>{{height}}</span>
+                  </li>
+                  <li>
+                    <h5>Num. Tx.</h5>
+                    <span>{{num_tx}}</span>
+                  </li>
+                  <li>
+                    <h5>Timestamp</h5>
+                    <span>{{timestamp}}</span>
+                  </li>
+                  <li>
+                    <h5>Created At</h5>
+                    <span>{{created_at}}</span>
+                  </li>
+                </ul>
+                <div class="clearfix block_hash">
+                  <h5>Block Hash</h5>
+                  <a href="/api/blocks/{{hash}}" target="_blank"><span>{{hash}}</span></a>
+                </div>
+              </div>
+            </script>
+            <div class="stats_block">
+              <% Toshi::Models::Block.main_branch.offset(0).limit(5).order(Sequel.desc(:height)).each{|block| %>
+              <div class="block">
+                <span class="block_num">Block No. <%= block.height %></span>
+                <ul class="clearfix">
+                  <li>
+                    <h5>Height</h5>
+                    <span><%= block.height %></span>
+                  </li>
+                  <li>
+                    <h5>Num. Tx.</h5>
+                    <span><%= block.transactions_count %></span>
+                  </li>
+                  <li>
+                    <h5>Timestamp</h5>
+                    <span><%= Time.at(block.time).utc %></span>
+                  </li>
+                  <li>
+                    <h5>Created At</h5>
+                    <span><%= Time.at(block.created_at).utc %></span>
+                  </li>
+                </ul>
+                <div class="clearfix block_hash">
+                  <h5>Block Hash</h5>
+                  <a href="/api/blocks/<%= block.hsh %>" target="_blank"><span><%= block.hsh %></span></a>
+                </div>
+              </div>
+              <% } %>
+            </div>
+          </div><!-- last_block -->
+        </div><!-- tab-pane -->
+        <div class="tab-pane" id="transaction">
+          <div class="last_tx">
+            <script id="tx-template" type="text/x-handlebars-template">
+              <div class="tx">
+                <span class="tx_num">Unconfirmed {{pool}} pool transaction</span>
+                 <ul class="clearfix">
+                  <li>
+                    <h5>Size</h5>
+                    <span>{{size}}</span>
+                  </li>
+                  {{#if amount}}
+                  <li>
+                    <h5>Amount</h5>
+                    <span>{{amount}}</span>
+                  </li>
+                  {{/if}}
+                  <li>
+                    <h5>Created At</h5>
+                    <span>{{created_at}}</span>
+                  </li>
+                </ul>
+                <div class="clearfix tx_hash">
+                  <h5>Hash</h5>
+                  <a href="/api/transactions/{{hash}}"><span>{{hash}}</span></a>
+                </div>
+              </div>
+            </script>
+            <div class="stats_tx">
+              <% Toshi::Models::UnconfirmedTransaction.offset(0).limit(5).order(Sequel.desc(:id)).each{|tx| %>
+              <div class="tx">
+                <span class="tx_num">Unconfirmed <%= tx.pool_name %> pool transaction</span>
+                 <ul class="clearfix">
+                  <li>
+                    <h5>Size</h5>
+                    <span><%= tx.size %></span>
+                  </li>
+                  <% if tx.pool_name == 'memory' %>
+                  <li>
+                    <h5>Amount</h5>
+                    <span><%= "%.8f" % (tx.total_out_value / 1e8) %></span>
+                  </li>
+                  <% end %>
+                  <li>
+                    <h5>Created At</h5>
+                    <span><%= Time.at(tx.created_at).utc %></span>
+                  </li>
+                </ul>
+                <div class="clearfix tx_hash">
+                  <h5>Hash</h5>
+                  <a href="/api/transactions/<%= tx.hsh %>"><span><%= tx.hsh %></span></a>
+                </div>
+              </div>
+              <% } %>
+            </div>
+          </div><!-- last_tx -->
+        </div><!-- tab-pane -->
+      </div><!-- tab-content -->
+    </div>
+
+    <div class="col-md-4 col-lg-offset-1">
+      <div class="toshi_links">
+        <iframe src="http://ghbtns.com/github-btn.html?user=coinbase&repo=toshi&type=watch&count=true"
+        allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+
+        <iframe src="http://ghbtns.com/github-btn.html?user=coinbase&repo=toshi&type=fork&count=true"
+        allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+      </div>
+      <div class="section_title clearfix">
+        <div class="left">
+          <h2><%= @network %></h2>
+        </div>
+        <div class="right websocket_wrap">
+          <span class="websocket_stats active" style="display: none">IN SYNC</span>
+          <span class="websocket_stats syncing" style="display: none">SYNCING</span>
+          <span class="websocket_stats offline" style="display: none">OFFLINE</span>
+        </div>
+      </div>
+
+      <div class="info_block">
+          <ul class="clearfix">
+            <li class="clearfix">
+              <h5>Available peers</h5>
+              <span class="available-peers"><%= @available_peers %></span>
+              <p>Number of peers discovered by toshi</p>
+            </li>
+            <li class="clearfix">
+              <h5>connected peers</h5>
+              <span class="connected-peers"><%= @connected_peers %></span>
+              <p>Number of peers that toshi is connected to</p>
+            </li>
+            <li class="clearfix sub">
+              <h5>blocks</h5>
               <ul class="clearfix">
-                <li>
-                  <h5>Height</h5>
-                  <span>{{height}}</span>
+                <li class="clearfix">
+                  <h5>main branch</h5>
+                  <span class="blocks-count"><%= @blocks_count %></span>
                 </li>
-                <li>
-                  <h5>Num. Tx.</h5>
-                  <span>{{num_tx}}</span>
+                <li class="clearfix">
+                  <h5>side branch</h5>
+                  <span class="side-blocks-count"><%= @side_blocks_count %></span>
                 </li>
-                <li>
-                  <h5>Timestamp</h5>
-                  <span>{{timestamp}}</span>
-                </li>
-                <li>
-                  <h5>Created At</h5>
-                  <span>{{created_at}}</span>
+                <li class="clearfix">
+                  <h5>orphaned</h5>
+                  <span class="orphan-blocks-count"><%= @orphan_blocks_count %></span>
                 </li>
               </ul>
-              <div class="clearfix block_hash">
-                <h5>Block Hash</h5>
-                <a href="/api/blocks/{{hash}}" target="_blank"><span>{{hash}}</span></a>
-              </div>
-            </div>
-          </script>
-          <div class="stats_block">
-            <% Toshi::Models::Block.main_branch.offset(0).limit(5).order(Sequel.desc(:height)).each{|block| %>
-            <div class="block">
-              <span class="block_num">Block No. <%= block.height %></span>
+            </li>
+            <li class="clearfix sub">
+              <h5>transactions</h5>
               <ul class="clearfix">
-                <li>
-                  <h5>Height</h5>
-                  <span><%= block.height %></span>
+                <li class="clearfix">
+                  <h5>confirmed</h5>
+                  <span class="tx-count"><%= @tx_count %></span>
                 </li>
-                <li>
-                  <h5>Num. Tx.</h5>
-                  <span><%= block.transactions_count %></span>
-                </li>
-                <li>
-                  <h5>Timestamp</h5>
-                  <span><%= Time.at(block.time).utc %></span>
-                </li>
-                <li>
-                  <h5>Created At</h5>
-                  <span><%= Time.at(block.created_at).utc %></span>
+                <li class="clearfix">
+                  <h5>unconfirmed</h5>
+                  <span class="unconfirmed-tx-count"><%= @unconfirmed_tx_count %></span>
                 </li>
               </ul>
-              <div class="clearfix block_hash">
-                <h5>Block Hash</h5>
-                <a href="/api/blocks/<%= block.hsh %>" target="_blank"><span><%= block.hsh %></span></a>
-              </div>
-            </div>
-            <% } %>
-          </div>
-        </div><!-- last_block -->
-      </div><!-- tab-pane -->
-      <div class="tab-pane" id="transaction">
-        <div class="last_tx">
-          <script id="tx-template" type="text/x-handlebars-template">
-            <div class="tx">
-              <span class="tx_num">Unconfirmed {{pool}} pool transaction</span>
-               <ul class="clearfix">
-                <li>
-                  <h5>Size</h5>
-                  <span>{{size}}</span>
-                </li>
-                {{#if amount}}
-                <li>
-                  <h5>Amount</h5>
-                  <span>{{amount}}</span>
-                </li>
-                {{/if}}
-                <li>
-                  <h5>Created At</h5>
-                  <span>{{created_at}}</span>
-                </li>
-              </ul>
-              <div class="clearfix tx_hash">
-                <h5>Hash</h5>
-                <a href="/api/transactions/{{hash}}"><span>{{hash}}</span></a>
-              </div>
-            </div>
-          </script>
-          <div class="stats_tx">
-            <% Toshi::Models::UnconfirmedTransaction.offset(0).limit(5).order(Sequel.desc(:id)).each{|tx| %>
-            <div class="tx">
-              <span class="tx_num">Unconfirmed <%= tx.pool_name %> pool transaction</span>
-               <ul class="clearfix">
-                <li>
-                  <h5>Size</h5>
-                  <span><%= tx.size %></span>
-                </li>
-                <% if tx.pool_name == 'memory' %>
-                <li>
-                  <h5>Amount</h5>
-                  <span><%= "%.8f" % (tx.total_out_value / 1e8) %></span>
-                </li>
-                <% end %>
-                <li>
-                  <h5>Created At</h5>
-                  <span><%= Time.at(tx.created_at).utc %></span>
-                </li>
-              </ul>
-              <div class="clearfix tx_hash">
-                <h5>Hash</h5>
-                <a href="/api/transactions/<%= tx.hsh %>"><span><%= tx.hsh %></span></a>
-              </div>
-            </div>
-            <% } %>
-          </div>
-        </div><!-- last_tx -->
-      </div><!-- tab-pane -->
-    </div><!-- tab-content -->
+            </li>
+            <li class="clearfix">
+              <h5>database size</h5>
+              <span class="database-size"><%= @database_size %></span>
+            </li>
+          </ul>
+      </div>
+    </div>
   </div>
 
-  <div class="col-md-4 col-md-offset-1">
-    <div class="toshi_links">
-      <iframe src="http://ghbtns.com/github-btn.html?user=coinbase&repo=toshi&type=watch&count=true"
-      allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
-
-      <iframe src="http://ghbtns.com/github-btn.html?user=coinbase&repo=toshi&type=fork&count=true"
-      allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
-    </div>
-    <div class="section_title clearfix">
-      <div class="left">
-        <h2><%= @network %></h2>
-      </div>
-      <div class="right websocket_wrap">
-        <span class="websocket_stats active" style="display: none">IN SYNC</span>
-        <span class="websocket_stats syncing" style="display: none">SYNCING</span>
-        <span class="websocket_stats offline" style="display: none">OFFLINE</span>
-      </div>
-    </div>
-
-    <div class="info_block">
-        <ul class="clearfix">
-          <li class="clearfix">
-            <h5>Available peers</h5>
-            <span class="available-peers"><%= @available_peers %></span>
-            <p>Number of peers discovered by toshi</p>
-          </li>
-          <li class="clearfix">
-            <h5>connected peers</h5>
-            <span class="connected-peers"><%= @connected_peers %></span>
-            <p>Number of peers that toshi is connected to</p>
-          </li>
-          <li class="clearfix sub">
-            <h5>blocks</h5>
-            <ul class="clearfix">
-              <li class="clearfix">
-                <h5>main branch</h5>
-                <span class="blocks-count"><%= @blocks_count %></span>
-              </li>
-              <li class="clearfix">
-                <h5>side branch</h5>
-                <span class="side-blocks-count"><%= @side_blocks_count %></span>
-              </li>
-              <li class="clearfix">
-                <h5>orphaned</h5>
-                <span class="orphan-blocks-count"><%= @orphan_blocks_count %></span>
-              </li>
-            </ul>
-          </li>
-          <li class="clearfix sub">
-            <h5>transactions</h5>
-            <ul class="clearfix">
-              <li class="clearfix">
-                <h5>confirmed</h5>
-                <span class="tx-count"><%= @tx_count %></span>
-              </li>
-              <li class="clearfix">
-                <h5>unconfirmed</h5>
-                <span class="unconfirmed-tx-count"><%= @unconfirmed_tx_count %></span>
-              </li>
-            </ul>
-          </li>
-          <li class="clearfix">
-            <h5>database size</h5>
-            <span class="database-size"><%= @database_size %></span>
-          </li>
-        </ul>
-    </div>
-  </div>
-</div>
-
-<script>
-  $(document).ready(function() {
-    toshi.init()
-  })
-</script>
+  <script>
+    $(document).ready(function() {
+      toshi.init()
+    })
+  </script>
+</article>
