Docs update, websockets
- websockets updates
- docs, readme

--- a/docs/source/layouts/layout.erb
+++ b/docs/source/layouts/layout.erb
@@ -41,7 +41,7 @@ under the License.
 
     <script type="text/javascript">
     $(document).ready(function(){
-      $('.content').css('margin-bottom', parseInt($(window).height()) - (parseInt($('.content').height()) - parseInt($('#get-address-unspent-outputs').offset().top)));
+      $('.content').css('margin-bottom', parseInt($(window).height()) - (parseInt($('.content').height()) - parseInt($('.content h2').last().offset().top)));
     })
     </script>
   </head>
