--- a/lib/toshi/web/views/layout.erb
+++ b/lib/toshi/web/views/layout.erb
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,7 @@
   <title>Toshi</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/admin.css">
-  <link rel="shortcut icon" href="images/favicon1.ico">
+  <link rel="stylesheet" href="css/admin.css">
 
   <meta property="og:title" content="Toshi - Open source Bitcoin Node">
   <meta property="og:description" content="Toshi is a built on top of Ruby and PostgreSQL. It’s 100% Open source">
@@ -26,40 +25,52 @@
   <script src="js/bootstrap.js"></script>
   <script src="js/moment.js"></script>
   <script src="js/handlebars-v2.0.0.js"></script>
+  <script src="js/packery.pkgd.min.js"></script>
   <script src="js/main.js"></script>
+
+  <script type="text/javascript">
+  $(document).ready(function(){
+    var $container = $('.block_wraper').packery({
+      itemSelector: '.block',
+    });
+  })
+  </script>
 </head>
-<body class="page status">
+<body class="network_explorer">
   <header>
-    <div id="header" class="container">
+
+    <div class="container">
       <div class="row">
-        <div class="col-md-5 logo">
-          <h1><a href="/">TOSHI</a><i>v 0.1.0</i></h1>
-        </div>
-        <div class="col-md-7 features">
-          <div class="text-left">
-            <h3>A full bitcoin node for building web applications.</h3>
-            <p>Toshi is a complete implementation of the bitcoin protocol, written in Ruby and backed by PostgreSQL.</p>
-          </div>
-        </div>
-      </div>
-    </div> <!-- container -->
-  </header>
-<section class="page_wraper">
-  <div class="container">
-      <%= yield %>
-  </div>
-</section>
-  <footer>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-md-6 col-md-push-3">
-          <p>
-            Toshi is 100% open source and maintained by
-            <a href="https://coinbase.com/" target="_blank" title="Coinbase international digital wallet for bitcoin currency" class="coinbase_logo">Coinbase</a>
-          </p>
+        <div class="col-md-12">
+          <nav class="navbar navbar-default" role="navigation">
+            <div class="container-fluid">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="stats.html">Status</a></li>
+                <li><a href="stats.html">Documentation</a></li>
+              </ul>
+            </div><!-- /.container-fluid -->
+          </nav>
         </div>
       </div>
     </div>
+  </header>
+  <div class="cointainer">
+    <section class="page_wraper">
+      <%= yield %>
+    </section>
+  </div>
+</section>
+<div class="container text-center">
+  <footer>
+    <div class="row">
+      <div class="col-md-6 col-md-push-3">
+        <p>Toshi is 100% open source and maintained by
+          <a href="https://coinbase.com/" target="_blank" class="coinbase_logo">Coinbase</a>
+        </p>
+      </div>
+    </div>
   </footer>
+</div>
 </body>
 </html>
