Show tx pool name

--- a/lib/toshi/web/views/index.erb
+++ b/lib/toshi/web/views/index.erb
@@ -65,7 +65,7 @@
           <div class="last_tx">
             <script id="tx-template" type="text/x-handlebars-template">
               <div class="tx">
-                <span class="tx_num">Unconfirmed {{pool_name}} pool transaction</span>
+                <span class="tx_num">Unconfirmed {{pool}} pool transaction</span>
                  <ul class="clearfix">
                   <li>
                     <h5>Size</h5>
