--- a/docs/source/stylesheets/screen.css.scss
+++ b/docs/source/stylesheets/screen.css.scss
@@ -43,7 +43,7 @@ html, body {
 .navbar {
   position: fixed;
   height: 50px;
-  background: rgb(20, 45, 92);
+  background: #25497e;
   left: 0;
   top: 0;
   right: 0;
