--- a/lib/toshi/web/views/layout.erb
+++ b/lib/toshi/web/views/layout.erb
@@ -33,7 +33,7 @@
     <div id="header" class="container">
       <div class="row">
         <div class="col-md-5 logo">
-          <h1><a href="/">TOSHI</a><i>v 0.1.0</i></h1>
+          <h1><a href="/">TOSHI</a><i>v<%= Toshi::VERSION %></i></h1>
         </div>
         <div class="col-md-7 features">
           <div class="text-left">
