--- a/css/modified.css
+++ b/css/modified.css
@@ -171,7 +171,7 @@ arrows arrow[ar-i="2"] {
 
 #header {
   display: table;
-  min-height: 200px;
+  min-height: 600px;
 }
 .page #header {
   padding: 40px 0 60px;
@@ -207,8 +207,20 @@ arrows arrow[ar-i="2"] {
   letter-spacing: 30px;
   font-size: 70px;
   text-align: center;
-  margin-bottom: 50px;
+  margin:0 auto 50px;
   font-weight: lighter;
+  display: block;
+  position: relative;
+}
+#header h1 i {
+  display: block;
+  position: relative;
+  right: -118px;
+  bottom: 11px;
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 0px;
+  color: rgba(255, 255, 255, 0.701961);
 }
 #header h1 {
   -webkit-animation-name: fadeInUp;
@@ -751,6 +763,9 @@ footer a:hover {
     font-size: 60px;
     margin-bottom: 30px;
   }
+  #header h1 i {
+    right: -107px;
+  }
   .features h3 {
     position: static;
   }
@@ -800,6 +815,9 @@ footer a:hover {
     font-size: 50px;
     margin-bottom: 10px;
   }
+  #header h1 i {
+    right: -92px;
+  }
   .btn {
     width: 70%;
     margin: 0 0 20px;
@@ -818,6 +836,10 @@ footer a:hover {
     font-size: 36px;
     margin-bottom: 8px;
     margin-top: 15px;
+  }
+  #header h1 i {
+    right: -58px;
+    bottom: 7px;
   }
   #header p {
     font-size: 13px;
